apps/php-hello/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: php-hello
  labels:
    app: php-hello
    app.kubernetes.io/component: php-hello
    app.kubernetes.io/instance: php-hello
    app.kubernetes.io/name: php-hello
    app.kubernetes.io/part-of: php-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-hello
  template:
    metadata:
      labels:
        app: php-hello
        deployment: php-hello
    spec:
      containers:
        - name: php-hello
          image: 'image-registry.openshift-image-registry.svc:5000/php-hello-dev/php-hello@sha256:bb9e3c8d3e1f2c55fc6b3fff12df19a8bb275beb6d7e3bcdbca6553be25762ed'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
