apps/php-hello/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: php-hello
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: php-hello
    deployment: php-hello
